Update and rename a-bootiful-client.properties to configclient2.properties

--- a/configclient2.properties
+++ b/configclient2.properties
@@ -1,5 +1,5 @@
 
 management.endpoints.web.exposure.include=*
 message=Hello hiii
-spring.profiles.active=test
+#spring.profiles.active=test
 server.port=8081
